@@ -1,3 +1,9 @@
+2007-08-14  Wakaba  <wakaba@suika.fam.cx>
+
+	* schema-style.css: New file.  (Split from schema.cgi).
+
+	* schema.cgi: Diff mode support.
+
 2007-08-13  Wakaba  <wakaba@suika.fam.cx>
 
 	* schema.cgi: Use |charset| property for Content-Type.
